# dive-in-python

./: .gitignore  README.md  pyproject.toml
myapp/cli/: main.py
myapp/core/: calculator.py
tests/: test_calculator.py
